# jsonish

./: Cargo.toml  README.md  main.js  package-lock.json  package.json  rollup.config.js  rollup.config.mjs
src/: index.js  lib.rs
test/: jsonish.test.js  jsonish.test.mjs
types/: index.d.ts
